--- a/ind.html
+++ b/ind.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/sty.css">
+    <link rel="stylesheet" href="/css/sty.css">
     <title>Menu</title>
 </head>
 
@@ -17,17 +17,17 @@
             <div class="food-h1">
                 <h1>food</h1>
             </div>
-            <img src="../photo/0cd60b86ee3961f6651456a241ff1a6b.jpg" alt="" class="img-f1">
-            <img src="../photo/1cba2c21c7c2eed9a9dc226c3a5f7f4a.jpg" alt="" class="img-f2">
-            <img src="../photo/3006c4fb0f75a39a222a745e6769f8e3.jpg" alt="" class="img-f3">
-            <img src="../photo/3e10bbc839b5ab13a9561cfed1f6fa8b.jpg" alt="" class="img-f4">
-            <img src="../photo/4b2463d195098f110e3705227be65b4b.jpg" alt="" class="img-f5">
-            <img src="../photo/5fda608400e86933e696052c41b7ec44.jpg" alt="" class="img-f6">
-            <img src="../photo/98fea9ce008ef9fec880f2c089f26620.jpg" alt="" class="img-f7">
-            <img src="../photo/9ac1f96f80efd57e2453649003d8ec1c.jpg" alt="" class="img-f8">
-            <img src="../photo/c9c5013a47c78dde12d22a8659cdb945.jpg" alt="" class="img-f9">
-            <img src="../photo/ce072d4db0753e8fe0e7459526fa904e.jpg" alt="" class="img-f10">
-            <img src="../photo/fae033e76c0fa7daa19df435cee53bba.jpg" alt="" class="img-f11">
+            <img src="/photo/0cd60b86ee3961f6651456a241ff1a6b.jpg" alt="" class="img-f1">
+            <img src="/photo/1cba2c21c7c2eed9a9dc226c3a5f7f4a.jpg" alt="" class="img-f2">
+            <img src="/photo/3006c4fb0f75a39a222a745e6769f8e3.jpg" alt="" class="img-f3">
+            <img src="/photo/3e10bbc839b5ab13a9561cfed1f6fa8b.jpg" alt="" class="img-f4">
+            <img src="/photo/4b2463d195098f110e3705227be65b4b.jpg" alt="" class="img-f5">
+            <img src="/photo/5fda608400e86933e696052c41b7ec44.jpg" alt="" class="img-f6">
+            <img src="/photo/98fea9ce008ef9fec880f2c089f26620.jpg" alt="" class="img-f7">
+            <img src="/photo/9ac1f96f80efd57e2453649003d8ec1c.jpg" alt="" class="img-f8">
+            <img src="/photo/c9c5013a47c78dde12d22a8659cdb945.jpg" alt="" class="img-f9">
+            <img src="/photo/ce072d4db0753e8fe0e7459526fa904e.jpg" alt="" class="img-f10">
+            <img src="/photo/fae033e76c0fa7daa19df435cee53bba.jpg" alt="" class="img-f11">
             <div class="salary-row1">
                 <p>450LE</p>
                 <p>200LE</p>
@@ -67,15 +67,15 @@
             <div class="drink-h1">
                 <h1>drinks</h1>
             </div>
-            <img src="../photo/09a2226d95e7c62cd0a8fc6d190040cc.jpg" alt="">
-            <img src="../photo/a9c5f87ce110a8e0eb0d9e1003c6dab2.jpg" alt="">
-            <img src="../photo/a208d2859c6e6370c3340caced0a390b.jpg" alt="">
-            <img src="../photo/e4e298580092546276f9bddbe04cdb23.jpg" alt="">
-            <img src="../photo/b61e87af03c84452e4aeaa38b65a2f89.jpg" alt="">
-            <img src="../photo/84f12dbfd2ab3e1d07bbfca11743041a.jpg" alt="">
-            <img src="../photo/a6d932ad8c1ce571be3acd5a55a96822.jpg" alt="">
-            <img src="../photo/518bdbcc058c16c612b59431f560533c.jpg" alt="">
-            <img src="../photo/6ae482a0690b8ca89fd3acd554a36d66.jpg" alt="">
+            <img src="/photo/09a2226d95e7c62cd0a8fc6d190040cc.jpg" alt="">
+            <img src="/photo/a9c5f87ce110a8e0eb0d9e1003c6dab2.jpg" alt="">
+            <img src="/photo/a208d2859c6e6370c3340caced0a390b.jpg" alt="">
+            <img src="/photo/e4e298580092546276f9bddbe04cdb23.jpg" alt="">
+            <img src="/photo/b61e87af03c84452e4aeaa38b65a2f89.jpg" alt="">
+            <img src="/photo/84f12dbfd2ab3e1d07bbfca11743041a.jpg" alt="">
+            <img src="/photo/a6d932ad8c1ce571be3acd5a55a96822.jpg" alt="">
+            <img src="/photo/518bdbcc058c16c612b59431f560533c.jpg" alt="">
+            <img src="/photo/6ae482a0690b8ca89fd3acd554a36d66.jpg" alt="">
             <div class="salary-row1">
                 <p>100LE</p>
                 <p>90LE</p>
@@ -111,11 +111,11 @@
             <div class="desrts-h1">
                 <h1>desrts</h1>
             </div>
-            <img src="../photo/09d3d94665af2847935d52a34da680ed.jpg" alt="">
-            <img src="../photo/0fceb803cfa5ac4ddee46ccd9cf2874b.jpg" alt="">
-            <img src="../photo/8df972b16057fd7f40dca4847f3b3280.jpg" alt="">
-            <img src="../photo/962dbf7bf690d9822c84016dcb5a054f.jpg" alt="">
-            <img src="../photo/d0b53495f95a8232153e294ecc9a1c78.jpg" alt="">
+            <img src="/photo/09d3d94665af2847935d52a34da680ed.jpg" alt="">
+            <img src="/photo/0fceb803cfa5ac4ddee46ccd9cf2874b.jpg" alt="">
+            <img src="/photo/8df972b16057fd7f40dca4847f3b3280.jpg" alt="">
+            <img src="/photo/962dbf7bf690d9822c84016dcb5a054f.jpg" alt="">
+            <img src="/photo/d0b53495f95a8232153e294ecc9a1c78.jpg" alt="">
             <div class="salary-row1">
                 <p>100LE</p>
                 <p>90LE</p>
@@ -150,5 +150,6 @@
 
     </div>
 </body>
+
 
 </html>
