--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Veloré</title>
 </head>
 
@@ -59,14 +59,14 @@
             <h1>menu</h1>
         </div>
         <div class="menu-img">
-            <a href="../html/ind.html"><img class="img-1" src="../photo/9dd1972812898b21db259e8f3ae68ada.jpg"
+            <a href="/html/ind.html"><img class="img-1" src="/photo/9dd1972812898b21db259e8f3ae68ada.jpg"
                     alt=""></a>
-            <a href="../html/ind.html"><img class="img-2" src="../photo/f331bda607d8bd1c9feb04b82da61a95.jpg"
+            <a href="/html/ind.html"><img class="img-2" src="/photo/f331bda607d8bd1c9feb04b82da61a95.jpg"
                     alt=""></a>
-            <a href="../html/ind.html"><img class="img-3" src="../photo/0226d8f203ced8e6ed52c9b924d17ca5.jpg"
+            <a href="/html/ind.html"><img class="img-3" src="/photo/0226d8f203ced8e6ed52c9b924d17ca5.jpg"
                     alt=""></a>
         </div>
-        <div class="menu-but"><a href="../html/ind.html">view menu</a></div>
+        <div class="menu-but"><a href="/html/ind.html">view menu</a></div>
     </div>
     <div class="offer" id="offer">
         <div class="off-h">
@@ -78,7 +78,7 @@
                 flavors in a classy atmosphere</p>
             <p>only by <del style="color: gray;">19000 </del><span class="off-p2"> 10000LE</span></p>
         </div>
-        <img class="off-img" src="../photo/Tajin-Setty-2-1721647495.png" alt="">
+        <img class="off-img" src="/photo/Tajin-Setty-2-1721647495.png" alt="">
         <div class="countdown">
             <div>
                 <span id="hours">14</span>
@@ -108,21 +108,21 @@
         </form>
         <div class="review">
             <div class="slide active">
-                <img src="../photo/pexels-italo-melo-881954-2379004.jpg" class="img-rev">
+                <img src="/photo/pexels-italo-melo-881954-2379004.jpg" class="img-rev">
                 <p class="rev-p">"The food was absolutely delicious! Everything was fresh,<br> well-seasoned, and full
                     of
                     flavor. One of the best dining <br> experiences I’ve had."</p>
             </div>
 
             <div class="slide">
-                <img src="../photo/pexels-stefanstefancik-91227.jpg" class="img-rev">
+                <img src="/photo/pexels-stefanstefancik-91227.jpg" class="img-rev">
                 <p class="rev-p">"Amazing service and cozy atmosphere. I’ll definitely <br>come back again with my
                     friends!"
                 </p>
             </div>
 
             <div class="slide">
-                <img src="../photo/pexels-vinicius-wiesehofer-289347-1130626.jpg" class="img-rev">
+                <img src="/photo/pexels-vinicius-wiesehofer-289347-1130626.jpg" class="img-rev">
                 <p class="rev-p">"Great value for money. Portions are generous and the taste is perfect!"</p>
             </div>
         </div>
@@ -144,7 +144,8 @@
 
     </footer>
 
-    <script src="../js/in.js"></script>
+    <script src="/js/in.js"></script>
 </body>
+
 
 </html>
